navbar links shifted slightly to prevent overflow

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@
   justify-content: space-between;
   width: 100%;
   list-style: none;
-  margin: 0.5rem 0;
+  margin: 0.35rem 0;
   padding: 0;
   font-size: 0.7rem;
 }
